--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "test": "jest -i --verbose --coverage --runInBand",
         "start": "node server.js",
         "dboff": "killall mongod",
-        "dev": "nodemon server.js -V"
+        "client": "cd client && npm start",
+        "server": "nodemon server.js -V",
+        "dev": "concurrently \"npm run server\" \"npm run client\""
     },
     "repository": {
         "type": "git",
@@ -31,7 +33,7 @@
         "superagent": "^5.2.1"
     },
     "devDependencies": {
-        "eslint": "^6.8.0",
-        "jest": "^25.1.0"
+        "concurrently": "^5.1.0",
+        "eslint": "^6.8.0"
     }
 }
