--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,17 @@
 {
-    "name": "CUPS",
+    "name": "cups",
+    "main": "server.js",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
         "antd": "^3.26.8",
         "babel-plugin-import": "^1.13.0",
+        "body-parser": "~1.0.1",
         "customize-cra": "^0.9.1",
+        "express": "~4.17.0",
         "less": "^3.11.1",
         "less-loader": "^5.0.0",
+        "mongoose": "~5.0.0",
         "react": "^16.12.0",
         "react-app-rewired": "^2.1.5",
         "react-dom": "^16.12.0",
