--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,14 @@
     "private": true,
     "dependencies": {
         "antd": "^3.26.8",
+        "axios": "^0.19.2",
         "babel-plugin-import": "^1.13.0",
-        "body-parser": "~1.0.1",
+        "body-parser": "^1.19.0",
         "customize-cra": "^0.9.1",
         "express": "~4.17.0",
         "less": "^3.11.1",
         "less-loader": "^5.0.0",
-        "mongoose": "~5.0.0",
+        "mongoose": "^5.9.5",
         "react": "^16.12.0",
         "react-app-rewired": "^2.1.5",
         "react-dom": "^16.12.0",
@@ -28,10 +29,17 @@
     "eslintConfig": {
         "extends": "react-app"
     },
-    "browserslist": [
-        ">0.2%",
-        "not dead",
-        "not ie <= 11",
-        "not op_mini all"
-    ]
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "proxy": "http://localhost:6000"
 }
