--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
         "less": "^3.11.1",
         "less-loader": "^5.0.0",
         "mongoose": "^5.9.5",
+        "multer": "^1.4.2",
         "react": "^16.12.0",
         "react-app-rewired": "^2.1.5",
         "react-dom": "^16.12.0",
