--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "http-errors": "^1.7.3",
         "mongoose": "^5.8.11",
         "morgan": "^1.9.1",
+        "multer": "^1.4.2",
         "superagent": "^5.2.1"
     },
     "devDependencies": {
