--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "antd": "^3.26.8",
+        "antd": "4.0.3",
         "axios": "^0.19.2",
         "babel-plugin-import": "^1.13.0",
         "body-parser": "^1.19.0",
@@ -13,12 +13,12 @@
         "less": "^3.11.1",
         "less-loader": "^5.0.0",
         "mongoose": "^5.9.5",
-        "react": "^16.12.0",
+        "react": "^16.13.1",
         "react-app-rewired": "^2.1.5",
-        "react-dom": "^16.12.0",
+        "react-dom": "^16.13.1",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.3.1",
-        "recharts": "^2.0.0-beta.1"
+        "recharts": "^2.0.0-beta.4"
     },
     "scripts": {
         "start": "react-app-rewired start",
