--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
     },
     "homepage": "https://gitlab.com/jordanxliu/cups#readme",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "http-errors": "^1.7.3",
+        "is-empty": "^1.2.0",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.8.11",
         "morgan": "^1.9.1",
-        "superagent": "^5.2.1"
+        "superagent": "^5.2.1",
+        "validator": "^13.0.0"
     },
     "devDependencies": {
         "concurrently": "^5.1.0",
