--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "mongoose": "^5.8.11",
         "morgan": "^1.9.1",
         "multer": "^1.4.2",
+        "nodemon": "^2.0.2",
         "path": "^0.12.7",
         "superagent": "^5.2.1",
         "validator": "^13.0.0"
