--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,4 @@
-image: docker
-
+image: docker:latest
 services:
     - docker:dind
 
@@ -7,22 +6,29 @@ stages:
     - test
     - deploy
 
-test:
+step-develop:
     stage: test
+    before_script:
+        - export DYNAMIC_ENV_VAR=DEVELOP
+    only:
+        - develop
+    tags:
+        - develop
+    script:
+        - echo running tests in $DYNAMIC_ENV_VAR
+
+step-master:
+    stage: deploy
+    before_script:
+        - export DYNAMIC_ENV_VAR=master
     only:
         - master
+    tags:
+        - master
     script:
-        - echo run tests in this section
-
-step-deploy-prod:
-    stage: deploy
-    only:
-        - production
-    script:
-        - npm install
+        - echo setting up env $DYNAMIC_ENV_VAR
+        - sudo apt-get install -y python-pip
+        - sudo pip install docker-compose
         - sudo docker image prune -f
-        - sudo pip3 install docker-compose
-        - docker-compose build --no-cache
-        - docker-compose up -d
-    environment: production
-    when: manual
+        - sudo docker-compose -f docker-compose.yml build --no-cache
+        - sudo docker-compose -f docker-compose.yml up -d
