--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,19 @@
 version: '2'
-
 services:
-    api:
+    nginx:
+        build:
+            context: nginx
+            dockerfile: Dockerfile
+        ports:
+            - '80:80'
+        command: nginx -g "daemon off";
+        depends_on:
+            - nodejs
+
+    nodejs:
         build:
             context: .
-            dockerfile: .docker/Dockerfile
+            dockerfile: Dockerfile
         expose:
             - '5000'
-        #volumes:
-        #  - ./PythonAPI:/PythonAPI
         command: npm run server
