--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,14 +17,14 @@ step-develop:
     script:
         - echo running tests in $DYNAMIC_ENV_VAR
 
-step-master:
+step-uat:
     stage: deploy
     before_script:
-        - export DYNAMIC_ENV_VAR=master
+        - export DYNAMIC_ENV_VAR=UAT
     only:
         - master
     tags:
-        - master
+        - uat
     script:
         - echo setting up env $DYNAMIC_ENV_VAR
         - sudo apt-get install -y python-pip
@@ -32,3 +32,36 @@ step-master:
         - sudo docker image prune -f
         - sudo docker-compose -f docker-compose.yml build --no-cache
         - sudo docker-compose -f docker-compose.yml up -d
+
+step-deploy-staging:
+    stage: deploy
+    before_script:
+        - export DYNAMIC_ENV_VAR=STAGING
+    only:
+        - staging
+    tags:
+        - staging
+    script:
+        - echo setting up env $DYNAMIC_ENV_VAR
+        - sudo apt-get install -y python-pip
+        - sudo pip install docker-compose
+        - sudo docker image prune -f
+        - sudo docker-compose -f docker-compose.yml build --no-cache
+        - sudo docker-compose -f docker-compose.yml up -d
+
+step-deploy-production:
+    stage: deploy
+    before_script:
+        - export DYNAMIC_ENV_VAR=PRODUCTION
+    only:
+        - production
+    tags:
+        - production
+    script:
+        - echo setting up env $DYNAMIC_ENV_VAR
+        - sudo apt-get install -y python-pip
+        - sudo pip install docker-compose
+        - sudo docker image prune -f
+        - sudo docker-compose -f docker-compose.yml build --no-cache
+        - sudo docker-compose -f docker-compose.yml up -d
+    when: manual
