--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,7 +27,7 @@ http {
 	server {
 		#listen	8443 ssl;
 		listen 4200;
-		#server_name  localhost;
+		server_name  192.241.132.231;
 
 		#ssl_certificate      localhost.crt;
 		#ssl_certificate_key  localhost.key;
