--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,6 +21,11 @@ http {
         server_name localhost;
 
         location / {
+            root /build
+            index index.html
+        }
+
+        location /v2/ {
             proxy_pass_header Server;
             proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
