reverting to 1e773cc7b666b3efb665a33fd3879f7d9dd9613a

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '2'
 services:
-    web:
+    nginx:
         build:
             context: nginx
+            dockerfile: Dockerfile
         ports:
             - '80:80'
         command: nginx -g "daemon off";
         depends_on:
             - nodejs
-            - react
 
     nodejs:
         build:
@@ -17,10 +17,3 @@ services:
         expose:
             - '5000'
         command: npm start
-
-    react:
-        build:
-            context: .
-            dockerfile: client/Dockerfile
-
-        command: npm run build
