--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
         "http-errors": "^1.7.3",
         "is-empty": "^1.2.0",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.8.11",
+        "mongoose": "^5.9.5",
         "morgan": "^1.9.1",
         "multer": "^1.4.2",
+        "nodemon": "^2.0.2",
+        "passport": "^0.4.1",
+        "passport-jwt": "^4.0.0",
         "path": "^0.12.7",
         "superagent": "^5.2.1",
         "validator": "^13.0.0"
