--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "homepage": "https://gitlab.com/jordanxliu/cups#readme",
     "dependencies": {
+        "axios": "^0.19.2",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
@@ -40,6 +41,7 @@
         "passport-jwt": "^4.0.0",
         "path": "^0.12.7",
         "superagent": "^5.2.1",
+        "typescript": "^3.8.3",
         "validator": "^13.0.0"
     },
     "devDependencies": {
