--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
         "less-loader": "^5.0.0",
         "mongoose": "^5.9.5",
         "multer": "^1.4.2",
+        "path": "^0.12.7",
         "react": "^16.13.0",
         "react-app-rewired": "^2.1.5",
         "react-dom": "^16.13.1",
@@ -42,5 +43,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "http://localhost:5000"
+    "proxy": "http://localhost:8080"
 }
