--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
     "name": "cups",
-    "main": "server.js",
+    "main": "app.js",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
