--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
         "express": "~4.17.0",
         "less": "^3.11.1",
         "less-loader": "^5.0.0",
+        "moment": "^2.24.0",
         "mongoose": "^5.9.5",
         "multer": "^1.4.2",
         "path": "^0.12.7",
