--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
         "babel-plugin-import": "^1.13.0",
         "body-parser": "^1.19.0",
         "customize-cra": "^0.9.1",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.2",
         "express": "~4.17.0",
         "less": "^3.11.1",
         "less-loader": "^5.0.0",
