--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
+        "crypto-js": "^4.0.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "http-errors": "^1.7.3",
